fixed alignment

--- a/styles.scss
+++ b/styles.scss
@@ -146,6 +146,7 @@ header {
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     transition: 0.3s ease-in;
     padding-top: 0;
+    border: 0;
 
     &:hover {
       box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
@@ -162,6 +163,7 @@ header {
     h3 {
       text-transform: uppercase;
       letter-spacing: 3px;
+      font-size: 1.4rem;
       font-weight: 300;
     }
   }
